write command in outer package.json

--- a/package.json
+++ b/package.json
@@ -1,5 +1,13 @@
 {
+  "name": "chat-app",
+  "version": "1.0.0",
+  "scripts": {
+    "vercel-build": "cd front-end && npm install && npm run build",
+    "build": "cd front-end && npm run build",
+    "dev": "cd front-end && npm run dev"
+  },
   "dependencies": {
     "dotenv": "^16.4.7"
-  }
+  },
+  "devDependencies": {}
 }
