--- a/vercel.json
+++ b/vercel.json
@@ -14,16 +14,9 @@
     }
   ],
   "routes": [
-    {
-      "src": "/api/(.*)",
-      "dest": "/server/app.js"
-    },
-    {
-      "src": "/(.*)",
-      "dest": "/front-end/dist/$1"
-    }
+    { "src": "/api/(.*)", "dest": "/server/app.js" },
+    { "src": "/(.*)", "dest": "/front-end/dist/$1" }
   ],
   "buildCommand": "cd front-end && npm run build",
-  "outputDirectory": "front-end/dist",
   "installCommand": "cd front-end && npm install"
 }
