now we are getting 404 instaed of ui but backend is working

--- a/vercel.json
+++ b/vercel.json
@@ -15,7 +15,7 @@
   ],
   "routes": [
     { "src": "/api/(.*)", "dest": "server/app.js" },
-    { "src": "/(.*)", "dest": "front-end/dist/$1" }
+    { "src": "/(.*)", "dest": "/index.html" }
   ],
   "buildCommand": "cd front-end && npm run build",
   "installCommand": "cd front-end && npm install"
