--- a/vercel.json
+++ b/vercel.json
@@ -9,13 +9,14 @@
       "src": "front-end/package.json",
       "use": "@vercel/static-build",
       "config": {
-        "distDir": "dist"
+        "distDir": "front-end/dist"
       }
     }
   ],
   "routes": [
     { "src": "/api/(.*)", "dest": "server/app.js" },
-    { "src": "/(.*)", "dest": "/index.html" }
+    { "handle": "filesystem" },
+    { "src": "/.*", "dest": "front-end/dist/index.html" }
   ],
   "buildCommand": "cd front-end && npm run build",
   "installCommand": "cd front-end && npm install"
