--- a/vercel.json
+++ b/vercel.json
@@ -9,15 +9,15 @@
       "src": "front-end/package.json",
       "use": "@vercel/static-build",
       "config": {
-        "distDir": "front-end/dist"
+        "distDir": "dist"
       }
     }
   ],
   "routes": [
     { "src": "/api/(.*)", "dest": "server/app.js" },
     { "handle": "filesystem" },
-    { "src": "/.*", "dest": "front-end/dist/index.html" }
+    { "src": "/(.*)", "dest": "front-end/dist/index.html" }
   ],
-  "buildCommand": "cd front-end && npm run build",
-  "installCommand": "cd front-end && npm install"
+  "installCommand": "cd front-end && npm install",
+  "buildCommand": "cd front-end && npm run build"
 }
